# life-nuance-ai

./: .gitignore  README.md  pyproject.toml
artifacts/: router_model.json
data/: router_training.jsonl
docs/: PRODUCT_BRIEF.md
examples/: register_assistant.json  route_request.json
scripts/: train_router.py
src/life_nuance_ai/: __init__.py  app.py  model_store.py  registry.py  router.py  schemas.py  seed.py  training.py
src/life_nuance_ai/static/: app.js  index.html  styles.css
tests/: test_app.py  test_registry.py  test_router.py  test_training.py
