[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "life-nuance-ai"
version = "0.1.0"
description = "Assistant registry and routing platform for nuanced everyday life decisions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Hanjie Shen", email = "shenhanjie0418@gmail.com" }]
keywords = ["ai", "assistant", "registry", "routing", "life-planning"]
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.7",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/life_nuance_ai"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
